# CompareCommits

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.json
doc/html/: CompareCommits_8cpp.html  CompareCommits_8cpp_source.html  CompareCommits_8h.html  CompareCommits_8h_source.html  SimilarityMatrix_8cpp.html  SimilarityMatrix_8cpp_source.html  SimilarityMatrix_8h.html  SimilarityMatrix_8h_source.html  annotated.html  annotated_dup.js  classCompareCommits-members.html  classCompareCommits.html  classCompareCommits.js  classDiffCompareCommits-members.html  classDiffCompareCommits.html  classDiffCompareCommits.js  classSimilarityMatrix-members.html  classSimilarityMatrix.html  classSimilarityMatrix.js  classes.html  dir_69c0ad47d15d71cfac8e0d206e4e350d.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  hierarchy.html  hierarchy.js  index.html  main_8cpp.html  main_8cpp_source.html  navtreedata.js  navtreeindex0.js
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  files_0.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js
doc/latex/: CompareCommits_8cpp.tex  CompareCommits_8h.tex  SimilarityMatrix_8cpp.tex  SimilarityMatrix_8h.tex  annotated.tex  classCompareCommits.eps  classCompareCommits.tex  classDiffCompareCommits.eps  classDiffCompareCommits.tex  classSimilarityMatrix.tex  files.tex  hierarchy.tex  index.tex  main_8cpp.tex  refman.tex
doc/man/man3/: CompareCommits.3  CompareCommits.cpp.3  CompareCommits.h.3  DiffCompareCommits.3  SimilarityMatrix.3  SimilarityMatrix.cpp.3  SimilarityMatrix.h.3  main.cpp.3
doc_pages/: READMECompareCommits.md
scripts/: install.bat  install.sh
src/: CMakeLists.txt  CompareCommits.cpp  CompareCommits.h  SimilarityMatrix.cpp  SimilarityMatrix.h  main.cpp
src/CompareCommits/: CMakeLists.txt  CompareCommits.cpp  CompareCommits.hpp  SimilarityMatrix.cpp  SimilarityMatrix.hpp
src/CompareCommits-exe/: CMakeLists.txt  main.cpp
src/CompareCommitsDebug/: CMakeLists.txt  main.cpp
src/CompareCommitsLibrary/: CMakeLists.txt  CompareCommits.cpp  CompareCommits.doxyfile  CompareCommits.hpp  SimilarityMatrix.cpp  SimilarityMatrix.hpp
src/CompareCommitsProgram/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  CompareCommitsTests.cpp
